+++++++++++
Python News
+++++++++++

What's New in Python 3.3.0 Beta 2?
==================================

*Release date: xx-xxx-2012*

Core and Builtins
-----------------

- Issue #15229: An OSError subclass whose __init__ doesn't call back
  OSError.__init__ could produce incomplete instances, leading to crashes
  when calling str() on them.

Library
-------

- Issue #15210: Catch KeyError when imprortlib.__init__ can't find
  _frozen_importlib in sys.modules, not ImportError.

- Issue #15030: importlib.abc.PyPycLoader now supports the new source size
  header field in .pyc files.

- Issue #5346: Preserve permissions of mbox, MMDF and Babyl mailbox
  files on flush().

- Issue #10571: Fix the "--sign" option of distutils' upload command.
  Patch by Jakub Wilk.

- Issue #9559: If messages were only added, a new file is no longer
  created and renamed over the old file when flush() is called on an
  mbox, MMDF or Babyl mailbox.

- Issue 10924: Fixed mksalt() to use a RNG that is suitable for cryptographic
  purpose.

Extension Modules
-----------------

- Issue #15194: Update libffi to the 3.0.11 release.

Tools/Demos
-----------

- Issue #12605: The gdb hooks for debugging CPython (within Tools/gdb) have
  been enhanced to show information on more C frames relevant to CPython within
  the "py-bt" and "py-bt-full" commands:
    * C frames that are waiting on the GIL
    * C frames that are garbage-collecting
    * C frames that are due to the invocation of a PyCFunction

Build
-----

- Issue #14330: For cross builds, don't use host python, use host search paths
  for host compiler.

- Issue #15235: Allow Berkley DB versions up to 5.3 to build the dbm module.


What's New in Python 3.3.0 Beta 1?
==================================

*Release date: 27-Jun-2012*

Core and Builtins
-----------------

- Fix a (most likely) very rare memory leak when calling main() and not being
  able to decode a command-line argument.
